# KeepAlive

./: .gitignore  Untitled  build.gradle  config.gradle  settings.gradle
alive/: CMakeLists.txt  build.gradle
alive/src/androidTest/java/com/keep/alive/: ExampleInstrumentedTest.java
alive/src/main/: AndroidManifest.xml
alive/src/main/aidl/android/content/: ISyncAdapter.aidl  ISyncAdapterUnsyncableAccountCallback.aidl
alive/src/main/aidl/com/keep/alive/: IDaemonService.aidl
alive/src/main/cpp/: common.h  daemon.c
alive/src/main/java/com/keep/alive/: ActionBroadcastReceiver.java  Application.java  KeepAliveActivity.java  KeepAliveApplication.java  KeepAliveContentProvider.java  KeepAliveInit.java  OhDaemon.java
alive/src/main/java/com/keep/alive/alarm/: AlarmReceiver.java
alive/src/main/java/com/keep/alive/base/: DaemonReceiver.java  DaemonService.java  DaemonUtils.java
alive/src/main/java/com/keep/alive/daemon/core/: DaemonAlive.java  DaemonEntry.java  DaemonMain.java  (+1 more)
alive/src/main/java/com/keep/alive/grayservice/: GrayService.java
alive/src/main/java/com/keep/alive/instrumentation/: KeepAliveInstrumentation.java
alive/src/main/java/com/keep/alive/jobscheduler/: KLJobManager.java  KLJobService.java
alive/src/main/java/com/keep/alive/syncaccount/: SyncManager.java
alive/src/main/java/com/keep/alive/tile/: OhTileService.java
alive/src/main/res/layout/: activity_keep_alive.xml
alive/src/main/res/values/: strings.xml  styles.xml
alive/src/main/res/xml/: account_authenticator.xml  account_sync_adapter.xml  account_sync_adapter1.xml
(+31 files in other folders)
